[gd_scene load_steps=4 format=3 uid="uid://b3eeq7btimrnc"]

[ext_resource type="Script" path="res://assets/scripts/rock.gd" id="1_lkiy0"]
[ext_resource type="Texture2D" uid="uid://bpfha3lprcahi" path="res://assets/sprites/rock.png" id="2_ip3of"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fjk73"]
radius = 24.0208

[node name="Rock" type="Node2D"]
script = ExtResource("1_lkiy0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fjk73")
debug_color = Color(0.611765, 0.419608, 0.862745, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("2_ip3of")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
